<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:src="@drawable/logo_image" />


        <EditText
            android:id="@+id/etIsim"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@android:color/white"
            android:drawableStart="@drawable/user_icon"
            android:drawablePadding="12dp"
            android:hint="@string/isim"
            android:inputType="text"
            android:maxLines="1"
            android:paddingBottom="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white_degrees_color" />


        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/etTelefonGiriniz"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@android:color/white"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="12dp"
            android:hint="@string/phone_format"
            android:inputType="number"
            android:lines="1"
            android:paddingBottom="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white_degrees_color"
            app:mask="+90(5##) ### ## ##" />


        <Button
            android:id="@+id/btnGonder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rectangle_bg_image"
            android:text="@string/giris_yapin"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </LinearLayout>
</RelativeLayout>